<resources>
    <string name="app_name" translatable="false">aceStore</string>
    <string name="some_error">يوجد خطأ</string>
    <string name="login">تسجيل دخول</string>
    <string name="skip">تخطى</string>
    <string name="title1">اختر البطاقة</string>
    <string name="subtitle1">يمكنك البحث في جميع البطاقات الموجوده داخل المتجر واختيار البطاقة التي تريد شراءها</string>
    <string name="title2">اختار طريقة الدفع</string>
    <string name="subtitle2">قم باختيار طريقة الدفع المناسبة لك من بين العديد من طرق الدفع المتواجدة بالمتجر</string>
    <string name="title3">استلم كود البطاقة</string>
    <string name="subtitle3">يمكنك البحث في جميع البطاقات الموجوده داخل المتجر واختيار البطاقة التي تريد شراءها</string>
    <string name="plz_number">من فضلك ادخل رقم جوالك</string>
    <string name="phone">رقم الجوال</string>
    <string name="hint_phone">ادخل رقم جوالك</string>
    <string name="login2">دخول</string>
    <string name="haveNoAccount">ليس لديك حساب ؟</string>
    <string name="newAccount">انشاء حساب جديد</string>
    <string name="verfiy">كود التحقق</string>
    <string name="plz_number_verify">ادخل الرمز الذي أرسلناه لك للتو علي رقمك</string>
    <string name="nothing_comming">لم تتلقّ أي رمز ؟</string>
    <string name="resend">إعادة إرسال</string>
    <string name="send">إرسال</string>
    <string name="continue_register">استكمال بيانات الحساب</string>
    <string name="userName">اسم المستخدم</string>
    <string name="family_name">اسم العائلة</string>
    <string name="hint_second_name">الاسم الثاني</string>
    <string name="email">البريد الالكتروني</string>
    <string name="haveAccount">هل لديك حساب بالفعل ؟</string>
    <string name="createAccount">إنشاء حساب</string>
    <string name="validate_must_enter_usern">لابد من إدخال اسم الإسم الاول</string>
    <string name="validate_must_enter_second_name">لابد من إدخال الإسم العائبة</string>
    <string name="validate_must_enter_email">لابد من إدخال الأيميل</string>
    <string name="title_home">أيس ستور</string>
    <string name="title_cards">البطاقات</string>
    <string name="title_purchases">مشترياتى</string>
    <string name="title_profile">حسابى</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_status">نظام الولاء</string>
    <string name="menu_support">الدعم الفنى</string>
    <string name="menu_about">حول التطبيق</string>
    <string name="menu_replacment">الإستبدال والإسترجاع</string>
    <string name="menu_rate">قيم التطبيق</string>
    <string name="menu_question">الأسئلة الشائعة</string>
    <string name="menu_share_app">شارك التطبيق</string>
    <string name="list_no_result">"لايوج بيانات "</string>
    <string name="no_internet">لايوجد اتصال بالانترنت</string>
    <string name="nav_header_title">زائر</string>
    <string name="categoryCard">تصنيفات البطاقات</string>
    <string name="orderNum">رقم الطلب :</string>
    <string name="reOrder">إعادة الطلب</string>
    <string name="account_info">معلومات الحساب</string>
    <string name="voucher">قسيمة شراء</string>
    <string name="account_setting">اعدادات الحساب</string>
    <string name="buyNow">إشترى الأن</string>
    <string name="txt_title">كيف كان اخر طلب لك معنا</string>
    <string name="txt_product">المنتجات</string>
    <string name="comment">اكتب رأيك بمتجرنا</string>
    <string name="sendRate">إرسال التقييم</string>
    <string name="ignore">تجاهل</string>
    <string name="last_order">آخر طلب</string>
    <string name="save">حفظ التغييرات</string>
    <string name="cancel">الغاء</string>
    <string name="review">أراء العملاء</string>
    <string name="rateMe">قم بتقيمنا</string>
    <string name="descRate">تقييمك للتطبيق يساعدنا في نشره و تطوير المتجر اكثر. اذا كانت تجربتك حلوة معنا لا تنسى تقيمنا</string>
    <string name="dateOrder">تاريخ الطلب</string>
    <string name="copoun">لديك كوبون خصم ؟</string>
    <string name="total">الاجمالي</string>
    <string name="apply">تطبيق</string>
    <string name="hintCopoun">كوبون الخصم</string>
    <string name="check_your_notwrk">Connection is Failed check your network</string>
    <string name="something_wron">Something went wrong</string>
    <string name="invalid_phone">"رقم التليفون غير صحيح "</string>
    <string name="phone_is_required">"لابد من إدخال رقم الجوال "</string>
    <string name="otp_invalid">رقم التحقق لابد من لإدخاله</string>
    <string name="invalide_enter_name">لابد من إدخال البريد الإلكترونى بطريقه صحيحة</string>
    <string name="must_enter_code">لابد من أدخال كود التحقق</string>
    <string name="logout">تسجيل خروج</string>
    <string name="txt_price">سعر الطلب</string>
    <string name="txt_discount">خصم</string>
    <string name="txt_tax">القيمة المضافه</string>
    <string name="txt_total">الاجمالى</string>
    <string name="order">إكتمال الطلب</string>
    <string name="title_cart">"السلة "</string>
    <string name="currencyKSA">ريال</string>
    <string name="ok">نعم</string>
    <string name="must_login">" من فضلك يرجى تسجيل الدخول "</string>
    <string name="first_name">الإسم الأول</string>
    <string name="txt_gallery">Gallery</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_yes">نعم</string>
    <string name="txt_no">ليس الأن</string>
    <string name="message_logout">هل تريد الخروج من الحساب ؟</string>
    <string name="loginOrCreate">تسجيل دخول او إنشاء حساب</string>
    <string name="there_is_no_product">لايوجد منتجات فى السلة</string>
    <string name="txt_payment_method">وسيلة الدفع</string>
    <string name="txt_title_payment_method">اختر وسيلة الدفع المناسبة لإتمام عملية الشراء</string>
    <string name="text_accept_terms_condition">بالإنتقال للدفع فإنك توافق على</string>
    <string name="txt_policy"><u>سياسة الإستخدام و سياسة الخصوصية</u></string>
    <string name="creditCard">بيانات الكارت </string>
    <string name="card_number">رقم البطاقة</string>
    <string name="card_holder">الأسم</string>
    <string name="expirMonth">شهر</string>
    <string name="expireYear">عام</string>
    <string name="must_enter_valid_cart">"لابد من إدخال رقم الكارت صحيح "</string>
    <string name="muster_enter_name">لابد من إضافة اسم الكارت</string>
    <string name="must_enter_valid_month">"لابد من إدخال الشهر صحيح مثال 07 "</string>
    <string name="must_enter_valid_year">لابد من ادخال السنه بطريقه صحيحه  2021</string>
    <string name="must_enter_valid_cvv">لابد من إدخال الرمز الامنى 3 أرقام</string>
    <string name="menu_wallet">المحفظة</string>
    <string name="menu_championships">البطولات</string>
    <string name="payment">الـدفع</string>
    <string name="morePoints">احصل علي المزيد من النقاط</string>
    <string name="replacement">تم الاستبدال</string>
    <string name="no_replacement">لم يتم الاستبدال</string>
    <string name="txt_transaction">المعاملات</string>
    <string name="live">مباشر</string>
    <string name="next_text">القادمة</string>
    <string name="previous_text">السابقة</string>
    <string name="all_text">الكل</string>
    <string name="orderDetail">تفاصيل الطلب</string>
    <string name="orderPrice"> سعر الطلب :</string>
    <string name="orderVat">سعر قيمة المضافة : </string>
    <string name="orderDiscount">سعر الخصم :</string>
    <string name="orderTotal">الأجمالى : </string>
    <string name="number">عدد</string>
    <string name="total_points">النقاط المجمعه</string>
    <string name="numberOfChampions"> عدد المتسابقين %s متسابق</string>
    <string name="join">انضم</string>
    <string name="day">يوم</string>
    <string name="hour">ساعة</string>
    <string name="min">"دقائق "</string>
    <string name="chargeWallet">إشحن المحفظظة</string>
    <string name="amount">المبلغ</string>
    <string name="set_your_amount">ادخل المبلغ المراد تحويله الى المحفظه </string>
    <string name="txt_message_order_morthan_amount_points">المجموع الكلى اكبر من قيمة النقاط</string>
    <string name="txt_message_order_morthan_wallet_points">المجموع الكلى اكبر من من الموجود من المحفظه</string>
    <string name="txt_buy_product">تم شراء منتج بقيمة %s </string>
    <string name="txt_charge_visa_product">تم شحن البطاقة بقيمة %s </string>
    <string name="txt_missing_order_id">"لابد من وجود رقم الطلب لعمل تقييم "</string>
    <string name="txt_missing_order_comment">"لابد من إدخال تعليق "</string>
    <string name="txt_missing_order_value">لابد من إدخال التقيم</string>
    <string name="txt_message_must_login_to_get_orders">"لابد من تسجيل دخول للحصول على مشترياتك "</string>
    <string name="message_should_enter_player_id">"لابد من ادخال رقم اللاعب "</string>
    <string name="txt_title_for_player_id">رقم الآيدي الخاص بك باللعبة</string>
    <string name="player_id">رقم اللاعب</string>
    <string name="menu_member_ship">العضويات</string>
    <string name="joinChallenge">إنضم للمسابقة</string>
    <string name="instraction">تعليمات المسابقة</string>
    <string name="rewards">"الجوائز "</string>
    <string name="hint_title">من فضلك ادخل البيانات الاتيه لتتمكن من الانضمام للمسابقة</string>
    <string name="txt_message_enter_playername">من فضلك ادخل اسم اللاعب</string>
    <string name="txt_message_enter_player_id">"من فضلك ادخل رقم اللاعب "</string>
    <string name="save_succes_join_challenge">"تم الاشتراك بنجاح "</string>
    <string name="confirm">تأكيد</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>
    <string name="copyCode">إنسخ الكود</string>
    <string name="add_cart">أضف الى السلة</string>
    <string name="txt_title_policy">بالإنتقال للدفع فإنك توافق على</string>
</resources>