<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mvvm_template.ui.component.main.bottom.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cards"
        android:name="com.example.mvvm_template.ui.component.main.bottom.cards.CardsFragment"
        android:label="@string/title_cards"
        tools:layout="@layout/fragment_cards" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.mvvm_template.ui.component.main.bottom.purchase.PurchasedFragment"
        android:label="@string/title_purchases"
        tools:layout="@layout/fragment_purchased" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mvvm_template.ui.component.main.bottom.profile.ProfileFragment"
        tools:layout="@layout/profile_fragment" />
    <dialog
        android:id="@+id/rateMeFragment"
        android:name="com.example.mvvm_template.ui.component.main.rate_app.RateMeActivity"
        android:label="@string/rateMe"
        tools:layout="@layout/activity_rate_me"
        />


</navigation>