<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_color_page1">

        <TextView
            android:id="@+id/skip"
            style="@style/TextRegularFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/skip"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_login"
            style="@style/TextBoldFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:text="@string/loginOrCreate"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/back_top_raduis_white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_login">

            <TextView
                style="@style/TextRegularFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/plz_number"
                android:textColor="@color/txt_color1" />

            <TextView
                style="@style/TextRegularFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/phone"
                android:textColor="@color/txt_color2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/back_raduis_white"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">
                <!--                <TextView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:text="+966"-->
                <!--                    android:textColor="@color/black"-->
                <!--                    android:padding="@dimen/_5sdp"-->
                <!--                    android:layout_height="wrap_content"/>-->
                <!--                <ImageView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:tint="@color/black"-->
                <!--                    android:layout_gravity="center"-->
                <!--                    android:src="@drawable/ic_keyboard_arrow_down"-->
                <!--                    />-->
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/countries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"

                    android:background="@color/black" />
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="end"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/text_size13" />
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/back_raduis_white"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/tajawal_medium"
                android:text="@string/send" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="@dimen/_5sdp"

                    android:text="@string/haveNoAccount"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/newAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/newAccount"
                    android:textColor="@color/color_txt_new_account"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>