<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_color_page"
        tools:context=".ui.component.cart.CartActivity">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar_layout" />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"
                android:layout_height="wrap_content">

                <include
                    layout="@layout/empty_recycle_layout_without_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"

                    android:id="@+id/contentEmpty"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/copoun"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/back_border_primary_color"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:padding="@dimen/_5sdp"
                        android:hint="@string/hintCopoun"
                        android:background="@null"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/apply"
                        android:padding="@dimen/_5sdp"
                        android:id="@+id/apply"
                        android:textColor="@color/white"
                        style="@style/TextRegularFont"
                        android:background="@color/colorPrimary"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/bottom"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/subTotalContent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/txt_price"
                    style="@style/TextMediumFont"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:id="@+id/subTotal"
                    android:padding="@dimen/_5sdp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/discountContent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/txt_discount"
                    style="@style/TextMediumFont"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:id="@+id/discount"
                    android:padding="@dimen/_5sdp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/txt_tax"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:id="@+id/taxValue"
                    android:padding="@dimen/_5sdp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/totalContent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/txt_total"
                    style="@style/TextMediumFont"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:id="@+id/total"
                    android:padding="@dimen/_5sdp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:text="@string/order"
                android:gravity="center"
                android:id="@+id/pay"
                style="@style/TextMediumFont"
                android:id="@+id/order"
                android:background="@color/colorAccent"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>