<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_top_raduis_white"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_5sdp"
        android:id="@+id/close"
        android:src="@drawable/ic_close"
        android:padding="@dimen/_5sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/txt_title"
        style="@style/TextBoldFont"
        android:id="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rateImage"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:src="@drawable/ic_rate_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_product"
        style="@style/TextBoldFont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rateImage"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/txt_product"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rv_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_product"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:rating="3.5"
        android:id="@+id/rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_product"
        style="@style/CustomRatingBarStyle"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_raduis_white_10dp"
        android:backgroundTint="@color/back_color_page"
        app:layout_constraintTop_toBottomOf="@id/rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:lines="5"
        android:padding="@dimen/_5sdp"
        android:hint="@string/comment"
        android:id="@+id/comment"
        android:gravity="start"
        />

    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/sendRate"
            android:background="@drawable/back_raduis_white"
            android:backgroundTint="@color/colorAccent"
            android:padding="@dimen/_10sdp"
            android:text="@string/sendRate"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/TextRegularFont"
            android:textSize="@dimen/text_size14"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:id="@+id/ignore"
            android:padding="@dimen/_10sdp"
            android:text="@string/ignore"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/TextRegularFont"
            android:textSize="@dimen/text_size14"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>